# goit_homework_M2T12

./: main.py  pyproject.toml
alembic/versions/: 52338c010fbb_init.py  93bb7081d35c_init.py
docs/: conf.py  index.rst
migrations/versions/: 298b63ef1652_init.py  411a6e5c93f0_migration_4.py  5c029847a388_migration_5.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
tests/: test.db  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
